--- a/serviceDesk_client/src/main/java/team/dna2/serviceDesk_client/views/RootLayout.fxml
+++ b/serviceDesk_client/src/main/java/team/dna2/serviceDesk_client/views/RootLayout.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.RootLayoutController">
+<!-- <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.RootLayoutController"> -->
+<BorderPane prefHeight="400.0" prefWidth="600.0">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
